# read-write

./: CMakeLists.txt  README.md  ReadWrite.cbp  ReadWrite.depend  ReadWrite.layout  x.csv  y.csv
include/: rw.h
src/: CMakeLists.txt  rw.cpp  tests.cpp
tests/: CMakeLists.txt  tests  tests.cpp
